--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <h2>Your 24-hour grace period to pay the amount or the cost of building this website has expired. Please contact the developer of this website and pay the due amount to run this website again</h2>
-    <a hreft="https://www.facebook.com/EmbratorM"><Contact The Developer/a>
+    <a hreft="https://www.facebook.com/EmbratorM"><Contact The Developer</a>
   </body>
 </html>
