--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       body {
         font-family: Arial, sans-serif;
       }
+      a {
+        display: block;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
